--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
   "id": "Beep1",
   "name": "Annoying Beep",
   "short_name": "Beep",
-  "start_url": "https://annoyingbeep.com",
+  "start_url": "https://dev.annoyingbeep.com",
   "display": "standalone",
   "dir": "ltr",
-  "scope": "https:\/\/annoyingbeep.com",
+  "scope": "https:\/\/dev.annoyingbeep.com",
   "lang": "en",
   "display_override": [
     "fullscreen",
@@ -19,16 +19,22 @@
   "status_bar": "#DC2626",
   "icons": [
     {
-      "src": "https://annoyingbeep.com/images/android-chrome-192x192.png",
+      "src": "https:\/\/dev.annoyingbeep.com\/images\/android-chrome-192x192.png",
       "type": "image\/png",
       "sizes": "192x192",
       "purpose": "any"
     },
     {
-      "src": "https://annoyingbeep.com/images/android-chrome-512x512.png",
+      "src": "https:\/\/dev.annoyingbeep.com\/images\/android-chrome-512x512.png",
       "type": "image\/png",
       "sizes": "512x512",
       "purpose": "any"
     },
+    {
+      "src": "https:\/\/dev.annoyingbeep.com\/images\/android-chrome-512x512.png",
+      "type": "image\/png",
+      "sizes": "512x512",
+      "purpose": "maskable"
+    }
   ]
 }
