--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "id": "Beep1",
+  "id": "Beep2",
   "name": "Annoying Beep",
   "short_name": "Beep",
-  "start_url": "https://dev.annoyingbeep.com",
+  "start_url": "https://annoyingbeep.com",
   "display": "standalone",
   "dir": "ltr",
-  "scope": "https:\/\/dev.annoyingbeep.com",
+  "scope": "https:\/\/annoyingbeep.com",
   "lang": "en",
   "display_override": [
     "fullscreen",
@@ -19,19 +19,19 @@
   "status_bar": "#DC2626",
   "icons": [
     {
-      "src": "https:\/\/dev.annoyingbeep.com\/images\/android-chrome-192x192.png",
+      "src": "https:\/\/annoyingbeep.com\/images\/android-chrome-192x192.png",
       "type": "image\/png",
       "sizes": "192x192",
       "purpose": "any"
     },
     {
-      "src": "https:\/\/dev.annoyingbeep.com\/images\/android-chrome-512x512.png",
+      "src": "https:\/\/annoyingbeep.com\/images\/android-chrome-512x512.png",
       "type": "image\/png",
       "sizes": "512x512",
       "purpose": "any"
     },
     {
-      "src": "https:\/\/dev.annoyingbeep.com\/images\/android-chrome-512x512.png",
+      "src": "https:\/\/annoyingbeep.com\/images\/android-chrome-512x512.png",
       "type": "image\/png",
       "sizes": "512x512",
       "purpose": "maskable"
