--- a/manifest.json
+++ b/manifest.json
@@ -19,22 +19,52 @@
   "status_bar": "#DC2626",
   "icons": [
     {
-      "src": "https:\/\/annoyingbeep.com\/images\/android-chrome-192x192.png",
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/144x144-maskable.png",
+      "type": "image\/png",
+      "sizes": "144x144",
+      "purpose": "any"
+    },
+    {
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/144x144-maskable.png",
+      "type": "image\/png",
+      "sizes": "144x144",
+      "purpose": "maskable"
+    },
+    {
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/192x192.png",
       "type": "image\/png",
       "sizes": "192x192",
       "purpose": "any"
     },
     {
-      "src": "https:\/\/annoyingbeep.com\/images\/android-chrome-512x512.png",
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/192x192-maskable.png",
+      "type": "image\/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
+    },
+    {
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/512x512.png",
       "type": "image\/png",
       "sizes": "512x512",
       "purpose": "any"
     },
     {
-      "src": "https:\/\/annoyingbeep.com\/images\/android-chrome-512x512.png",
-      "type": "image\/png",
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/512x512-maskable.png",
       "sizes": "512x512",
+      "type": "image\/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/512x512-monochrome.png",
+      "sizes": "512x512",
+      "type": "image\/png",
+      "purpose": "monochrome"
+    },
+    {
+      "src": "https:\/\/annoyingbeep.com\/images\/icons\/1024x1024-monochrome.png",
+      "sizes": "1024x1024",
+      "type": "image\/png",
+      "purpose": "monochrome"
     }
   ]
 }
