--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "fullscreen",
     "minimal-ui"
   ],
-  "description": "Finally, a website for beeping. Frustrate and annoying your friend, family, and coworkers with the most powerful tool on the web.",
+  "description": "Finally, a website for beeping. frustrate and annoy your friend, family, and coworkers with the most powerful tool on the web.",
   "background_color": "#f1f5f9",
   "dark_background_color": "#000000",
   "theme_color": "#DC2626",
